home/Deployments/blog-ni-prev/Services.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-ni-prev-svc
  namespace: blog-ni-prev-system
  labels:
    app: blog-ni-prev-svc
spec:
  ports:
  - port: 80
    name: web
  selector:
    app: blog-ni-prev-app

---

apiVersion: v1
kind: Service
metadata:
  name: blog-ni-prev-builder-svc
  namespace: blog-ni-prev-system
  labels:
    app: blog-ni-prev-builder-svc
spec:
  clusterIP: 10.43.100.103
  ports:
  - port: 9000
    name: web
  selector:
    app: blog-ni-prev-builder-app
