home/Deployments/blog-ni-prev/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ni-prev-ingress
  namespace: blog-ni-prev-system
  annotations:
    kubernetes.io/ingress.class: nginx-external
spec:
  rules:
  - host: nightmares-prev.technically.fun
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blog-ni-prev-svc
            port:
              number: 5002
